Самый первый проект

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
           <li>
             <p class="content-section__list-item">
               <span class="content-section__list-accent"
-                >Недостаток информации.</span
-              >
+                >Недостаток информации.
+              </span>
               Начинать что-то особенно сложно, если вы новичок в теме и только
               разбираетесь, что к чему. Вам может казаться, что каждая строчка —
               глупость, и вообще всё, что вы сделаете, — будет неправильно.
